--- a/tox.ini
+++ b/tox.ini
@@ -24,6 +24,8 @@
 # Tox assumes that you have appropriate Python interpreters already
 # installed and that they can be run as (e.g.) 'python3.8'
 
+Ahoj světe!
+
 [tox]
 envlist =
   py38,py39
